2008-06-18  Neal H. Walfield  <neal@gnu.org>

	* mmap.c (mmap): If MAP_FIXED is specified, first unmap the
	region.
	(mmap): Don't panic if we fail to create a pager, just return
	MAP_FAILED.

	* map.h (map_destroy_t): New define.
	(struct map): Add field destroy.
	(map_create): Take additional argument destroy.
	* map.c (map_create): Take additional argument destroy.  Set
	MAP->DESTROY to it.
	(map_destroy): Call MAP->DESTROY.  If MAP->PAGER->NO_REFS is NULL,
	unlock MAP->PAGER->LOCK.
	* anonymous.c (offset_compare): Support comparing ranges.
	(mdestroy): New function.
	(destroy): Don't free ANON->MAP_AREA.
	(anonymous_pager_alloc): Pass mdestroy to map_create.
	* mprotect.c: New file.
	* Makefile.am (libhurd_mm_a_SOURCES): Add mprotect.c.

2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* pager.c (pager_init): Clear PAGER->LOCK.

	(pager_deinit): Don't use a while loop but an infinite loop.

2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* as-build.c (as_build): Improve debugging output.
	* map.c (map_install): Improve debugging output.
	(map_split): Likewise.
	(map_fault): Likewise.
	* map.h (REGION_FMT): Also print the end address.
	(REGION_PRINTF): Update accordingly.
	(MAP_FMT): Make output cleaner.

	(region_compare): Use a unintptr_t for the end, not an
	l4_uint64_t.

2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* as-lookup.c (as_lookup_rel_internal): New function.
	(as_lookup_rel): Implement this in terms of it.
	(as_dump_path_rel): New function.

2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* anonymous.c (fault): Assert that calling
	rm_object_discarded_clear does not fail.

2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* core.c: Remove dead file.
	* memory.c: Likewise.
	* priv.h: Likewise.
	* store.c: Likewise.
	* vm.h: Likewise.
	* vm.c: Likewise.

2008-06-16  Neal H. Walfield  <neal@gnu.org>

	* map.h: New file.
	* map.c: New file.
	* Makefile.am (libhurd_mm_a_SOURCES): Add map.h and map.c.
	* headers.m4: Link map.h to sysroot/include/hurd/map.h.